--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TFC | Tender Fried Chicken</title>
+    <title>TFC | Swetha Fried Sivabalan</title>
     <link rel="icon" type="image/jpeg"
     href="images/ttc.jpeg"/>
     <link rel="stylesheet"
